--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,98 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Montserrat;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+header {
+  background-color: #66BB6A;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+header a {
+  text-decoration: none;
+  color: white;
+  font-size: 3em;
+  font-family: Damion;
+}
+
+.wrapper {
+  margin: 0 0.5em;
+}
+
+.title-wrapper {
+  display: flex;
+  justify-content: space-around;
+}
+.title-wrapper .expenses-title-mobile {
+  opacity: 50%;
+}
+.title-wrapper h2 {
+  cursor: pointer;
+}
+.title-wrapper .income, .title-wrapper .expenses {
+  width: 100%;
+}
+
+.t2 {
+  display: none;
+}
+
+form {
+  display: flex;
+}
+form input:nth-child(2) {
+  margin-left: 1em;
+}
+form input:last-child {
+  margin-left: auto;
+}
+form input {
+  border: none;
+  background-color: #D9D9D9;
+  border-radius: 5px;
+}
+
+.input-name {
+  width: 200px;
+}
+
+.input-price {
+  width: 100px;
+}
+
+.input-name, .input-price, .input-button {
+  padding: 0.5em;
+}
+
+.added-to-list {
+  display: flex;
+  vertical-align: middle;
+  align-items: center;
+}
+.added-to-list .edit-delete-wrapper {
+  margin-left: auto;
+}
+.added-to-list .edit-delete-wrapper .edit-button, .added-to-list .edit-delete-wrapper .delete-button {
+  border: none;
+  background-color: #D9D9D9;
+  border-radius: 5px;
+  padding: 0.5em;
+}
+
+.income {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    width: 768px;
+    margin: 0 auto;
+  }
+}/*# sourceMappingURL=main.css.map */
