Adding records function working properly

--- a/css/main.scss
+++ b/css/main.scss
@@ -26,8 +26,11 @@ header{
 .title-wrapper{
     display: flex;
     justify-content: space-around;
+    .income-title{
+        opacity: 1;
+    }
     .expenses-title{
-        opacity: 50%;
+        opacity: 0.5;
     }
     h2{
         cursor: pointer;
@@ -43,8 +46,12 @@ form{
     input:nth-child(2){
         margin-left: 1em;
     }
-    input:last-child{
+    .input-button{
         margin-left: auto;
+        transition-duration: 0.4s;
+    }
+    .input-button:hover{
+        background-color: #66BB6A;
     }
     input{
         border: none;
@@ -55,10 +62,10 @@ form{
 .input-name{
     width: 200px;
 }
-.input-price{
+.input-value{
     width: 100px;
 }
-.input-name, .input-price, .input-button{
+.input-name, .input-value, .input-button{
     padding: 0.5em;
 }
 .added-to-list{
@@ -71,7 +78,17 @@ form{
             border: none;
             background-color: #D9D9D9;
             border-radius: 5px;
-            padding: 0.5em
+            padding: 0.5em;
+            transition-duration: 0.4s;
+        }
+        .edit-button{
+            margin-right: 0.5em;
+        }
+        .delete-button:hover{
+            background-color: #E74C3C;
+        }
+        .edit-button:hover{
+            background-color: #fbc531;
         }
     }
 }
