--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,11 @@ header a {
   display: flex;
   justify-content: space-around;
 }
+.title-wrapper .income-title {
+  opacity: 1;
+}
 .title-wrapper .expenses-title {
-  opacity: 50%;
+  opacity: 0.5;
 }
 .title-wrapper h2 {
   cursor: pointer;
@@ -46,8 +49,12 @@ form {
 form input:nth-child(2) {
   margin-left: 1em;
 }
-form input:last-child {
+form .input-button {
   margin-left: auto;
+  transition-duration: 0.4s;
+}
+form .input-button:hover {
+  background-color: #66BB6A;
 }
 form input {
   border: none;
@@ -59,11 +66,11 @@ form input {
   width: 200px;
 }
 
-.input-price {
+.input-value {
   width: 100px;
 }
 
-.input-name, .input-price, .input-button {
+.input-name, .input-value, .input-button {
   padding: 0.5em;
 }
 
@@ -80,6 +87,16 @@ form input {
   background-color: #D9D9D9;
   border-radius: 5px;
   padding: 0.5em;
+  transition-duration: 0.4s;
+}
+.added-to-list .edit-delete-wrapper .edit-button {
+  margin-right: 0.5em;
+}
+.added-to-list .edit-delete-wrapper .delete-button:hover {
+  background-color: #E74C3C;
+}
+.added-to-list .edit-delete-wrapper .edit-button:hover {
+  background-color: #fbc531;
 }
 
 .income {
