Deleting records function working properly

--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,10 @@ form input {
   display: none;
 }
 
+.line {
+  display: none;
+}
+
 @media screen and (min-width: 768px) {
   .wrapper {
     width: 768px;
