--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,16 @@ form input {
   vertical-align: middle;
   align-items: center;
 }
+.added-to-list .update-button {
+  border: none;
+  background-color: #D9D9D9;
+  border-radius: 5px;
+  padding: 0.5em;
+  transition-duration: 0.4s;
+}
+.added-to-list .update-button :hover {
+  background-color: #66BB6A;
+}
 .added-to-list .edit-delete-wrapper {
   margin-left: auto;
 }
@@ -89,7 +99,7 @@ form input {
   padding: 0.5em;
   transition-duration: 0.4s;
 }
-.added-to-list .edit-delete-wrapper .edit-button {
+.added-to-list .edit-delete-wrapper .edit-button, .added-to-list .edit-delete-wrapper .update-button {
   margin-right: 0.5em;
 }
 .added-to-list .edit-delete-wrapper .delete-button:hover {
@@ -109,6 +119,14 @@ form input {
 
 .line {
   display: none;
+}
+
+.update-input {
+  border: none;
+  background-color: #D9D9D9;
+  border-radius: 5px;
+  padding: 0.5em;
+  transition-duration: 0.4s;
 }
 
 @media screen and (min-width: 768px) {
