--- a/css/main.scss
+++ b/css/main.scss
@@ -72,6 +72,16 @@ form{
     display: flex;
     vertical-align: middle;
     align-items: center;
+    .update-button{
+            border: none;
+            background-color: #D9D9D9;
+            border-radius: 5px;
+            padding: 0.5em;
+            transition-duration: 0.4s;
+            :hover{
+                background-color: #66BB6A
+            }
+    }
     .edit-delete-wrapper{
         margin-left: auto;
         .edit-button, .delete-button{
@@ -81,7 +91,7 @@ form{
             padding: 0.5em;
             transition-duration: 0.4s;
         }
-        .edit-button{
+        .edit-button, .update-button{
             margin-right: 0.5em;
         }
         .delete-button:hover{
@@ -100,6 +110,13 @@ form{
 }
 .line{
     display: none;
+}
+.update-input{
+    border: none;
+    background-color: #D9D9D9;
+    border-radius: 5px;
+    padding: 0.5em;
+    transition-duration: 0.4s;
 }
 
 //desktop resolution
