--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ form {
   display: flex;
 }
 form input:nth-child(2) {
-  margin-left: 1em;
+  margin-left: 0.4em;
 }
 form .input-button {
   margin-left: auto;
@@ -121,12 +121,16 @@ form input {
   display: none;
 }
 
-.update-input {
+.update-input-name, .update-input-amount {
   border: none;
   background-color: #D9D9D9;
   border-radius: 5px;
   padding: 0.5em;
   transition-duration: 0.4s;
+}
+
+.update-input-amount {
+  width: 100px;
 }
 
 .budget-info {
@@ -135,9 +139,20 @@ form input {
   font-size: 1.2em;
 }
 
+.result {
+  font-size: 3em;
+}
+
 @media screen and (min-width: 768px) {
   .wrapper {
     width: 768px;
     margin: 0 auto;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  html,
+  body {
+    width: 100%;
+    overflow-x: hidden;
   }
 }/*# sourceMappingURL=main.css.map */
